# adventofcode2021

./: LICENSE  README.md  pyproject.toml
december01/: sonarsweep.py  sonarsweepthreedeep.py
src/december01/: sonarsweep.py  sonarsweepthreedeep.py
src/december02/: navigate_and_aim_submarine.py  navigate_and_aim_submarine_graphically.py  navigate_submarine.py  navigate_submarine_graphically.py
src/december03/: determine_life_support_rating.py  determine_powerconsumption.py
src/december04/: bingo.py  bingo_last.py  extern.py
src/december05/: determine_dangerous_points.py  determine_dangerous_points_x.py
src/december06/: compute_fishschool_growth_naive.py  compute_fishschool_growth_smart.py
src/december07/: align_crabs_1_median.py  align_crabs_2_mean.py
src/december08/: calculate_outgoing_signals.py  detect_number_signals.py
src/december09/: detect_low_points.py
src/december10/: find_corrupted_chunks.py
src/december14/: create_polymer.py  create_polymer_less_naive.py
